--- a/src/main/resources/templates/crudproductos.html
+++ b/src/main/resources/templates/crudproductos.html
@@ -22,6 +22,13 @@
 				<input type="text" th:field="*{des_prod}"
 					class="form-control" id="inputNom" placeholder="Nombre">
 			</div>
+			
+			<div class="form-group">
+				<label for="inputNom">Nombre2</label> 
+				<input type="text" th:field="*{des_prod}"
+					class="form-control" id="inputNom" placeholder="Nombre">
+			</div>
+			
 			<div class="form-row">
 				<div class="form-group col-md-6">
 					<label for="inputStk">Stock</label>
